# kholidays

./: .clang-tidy  .codespellrc  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .markdownlint.json  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  DESIGN  KF5HolidaysConfig.cmake.in  KF6HolidaysConfig.cmake.in  LICENSE.plan  LICENSE.txt  Mainpage.dox  Makefile.am  Messages.sh  README.md  astroseasons.cpp  astroseasons.h  config-libkholidays.h.cmake  cppcheck-suppressions.xml  holiday.cpp  holiday.h  holiday_p.h  holidayregion.cpp  holidayregion.h  holidayregionselector.cpp  holidayregionselector.h  holidayregionselector.ui  holidays.cpp  holidays.h  kholidays.cpp  kholidays.h  kholidays.widgets  kholidays_export.h  kholidays_version.h  lunarphase.cpp  (+11 more)
autotests/: CMakeLists.txt  holiday_calendar_systems  holiday_gb-eaw_en-gb_Test  holiday_solstice_in_holidays  testcategories.cpp  testcategories.h  testholidayregion.cpp  testholidayregion.h  testlunar.cpp  testlunar.h  testseasons.cpp  testseasons.h  testsunevents.cpp  testsunevents.h  testsunriseset.cpp  testsunriseset.h  testzodiac.cpp
docs/: Doxyfile.local
holidays/: CMakeLists.txt  Makefile.am  file-format.txt  holiday_BelgiumDutch  holiday_BelgiumFrench  holiday_BelgiumWalloon  holiday_ar  holiday_at  holiday_au  holiday_be  holiday_bg  holiday_br  holiday_cl  holiday_co  holiday_dk  holiday_es  holiday_fr  holiday_gr  holiday_gt  holiday_it  holiday_jm  holiday_lt  holiday_luFrench  holiday_na  holiday_no  holiday_nz  holiday_pl  holiday_ru  holiday_se  holiday_si  holiday_sk  holiday_ua  holiday_us  holiday_uy  holiday_za  holidays.qrc
holidays/plan1/: holiday_ar_es  holiday_at_de  holiday_au-act_en-gb  holiday_au-nsw_en-gb  holiday_au-nt_en-gb  holiday_au-qld_en-gb  holiday_au-vic_en-gb  holiday_au-wa_en-gb  holiday_be_fr  holiday_be_nl  holiday_be_wa  holiday_bg_bg  holiday_br_pt-br  holiday_by  holiday_ca_en-gb  holiday_ch_fr  holiday_cl_es  holiday_cn_zh-cn  holiday_co_es  holiday_cz_cs  holiday_de-by_de  holiday_es-ct_ca  holiday_es_es  holiday_fi_fi  holiday_fr_fr  holiday_gb-eaw_en-gb  holiday_gb-sct_en-gb  holiday_gr_el  holiday_gt_es  holiday_hu_hu  holiday_il_en  holiday_il_en-us  holiday_in_en-gb  holiday_is_is  holiday_it_it  holiday_jm_en-gb  holiday_jp_ja  holiday_lt_lt  holiday_lu_fr  holiday_lu_lb  (+15 more)
holidays/plan2/: holiday_ar_es  holiday_at_de  holiday_au-act_en-gb  holiday_au-nsw_en-gb  holiday_au-nt_en-gb  holiday_au-qld_en-gb  holiday_au-sa_en-gb  holiday_au-tas_en-gb  holiday_au-vic_en-gb  holiday_au-wa_en-gb  holiday_ba-bih_bs  holiday_ba-bih_en  holiday_ba-srp_sr  holiday_ba-srp_sr@ijekavian  holiday_ba-srp_sr@ijekavianlatin  holiday_ba-srp_sr@latin  holiday_bd_en  holiday_be_fr  holiday_be_nl  holiday_be_wa  holiday_bg_bg  holiday_bj_fr  holiday_bo_es  holiday_br_pt-br  holiday_by_be  holiday_ca-qc_fr  holiday_ca_en-gb  holiday_ch_de  holiday_ch_fr  holiday_ch_it  holiday_ci_fr  holiday_cl_es  holiday_cm_en  holiday_cm_fr  holiday_cn_zh-cn  holiday_co_es  holiday_cr_en  holiday_cr_es  holiday_cz_cs  holiday_de-bb_de  (+119 more)
parsers/: holidayparserdriver.cpp  holidayparserdriver_p.h
parsers/plan1/: holidayparserdriverplanold.cpp  holidayparserdriverplanold_p.h  parseholiday.c  scanholiday.c
parsers/plan2/: holidayparserdriverplan.cpp  holidayparserdriverplan_p.h  holidayparserplan.cpp  holidayparserplan.hpp  holidayparserplan.ypp  holidayscannerplan.cpp  holidayscannerplan.lpp  holidayscannerplan_p.h  position.hh
po/ar/: libkholidays5_qt.po
po/ast/: libkholidays5_qt.po
po/az/: libkholidays5_qt.po
po/be/: libkholidays5_qt.po
po/bg/: libkholidays5_qt.po
po/br/: libkholidays5_qt.po
po/bs/: libkholidays5_qt.po
po/ca/: libkholidays5_qt.po
po/ca@valencia/: libkholidays5_qt.po
po/cs/: libkholidays5_qt.po
po/cy/: libkholidays5_qt.po
po/da/: libkholidays5_qt.po
po/de/: libkholidays5_qt.po
po/el/: libkholidays5_qt.po
po/en_GB/: libkholidays5_qt.po
po/eo/: libkholidays5_qt.po
po/es/: libkholidays5_qt.po
po/et/: libkholidays5_qt.po
po/eu/: libkholidays5_qt.po
po/fa/: libkholidays5_qt.po
po/fi/: libkholidays5_qt.po
po/fr/: libkholidays5_qt.po
po/fy/: libkholidays5_qt.po
po/ga/: libkholidays5_qt.po
po/gl/: libkholidays5_qt.po
po/he/: libkholidays5_qt.po
po/hi/: libkholidays5_qt.po
po/hne/: libkholidays5_qt.po
po/hu/: libkholidays5_qt.po
po/ia/: libkholidays5_qt.po
po/id/: libkholidays5_qt.po
po/is/: libkholidays5_qt.po
po/it/: libkholidays5_qt.po
po/ja/: libkholidays5_qt.po
po/kk/: libkholidays5_qt.po
po/km/: libkholidays5_qt.po
po/ko/: libkholidays5_qt.po
po/lt/: libkholidays5_qt.po
po/lv/: libkholidays5_qt.po
po/mk/: libkholidays5_qt.po
src/: CMakeLists.txt  Messages.sh  astroseasons.cpp  astroseasons.h  holiday.cpp  holiday.h  holiday_p.h  holidaycategories.cpp  holidaycategories.h  holidayregion.cpp  holidayregion.h  holidayregionselector.cpp  holidayregionselector.h  holidayregionselector.ui  holidays.h  kholidays-index.qdoc  kholidays.qdoc  kholidays.qdocconf  kholidays.widgets  lunarphase.cpp  lunarphase.h  sunevents.cpp  sunevents.h  sunevents_p.h  sunriseset.cpp  sunriseset.h  util.h  zodiac.cpp  zodiac.h
src/declarative/: CMakeLists.txt  holidayregionsmodel.cpp  holidayregionsmodel.h  kholidaysdeclarativeplugin.cpp  kholidaysdeclarativeplugin.h
src/parsers/: holidayparserdriver.cpp  holidayparserdriver_p.h  qcalendarsystem.cpp  qcalendarsystem_p.h
src/parsers/plan1/: holidayparserdriverplanold.cpp  parseholiday.c
src/parsers/plan2/: FlexLexer.h  holidayparserdriverplan.cpp  holidayparserdriverplan_p.h  holidayparserplan.cpp  holidayparserplan.hpp  holidayparserplan.ypp  holidayscannerplan.cpp  holidayscannerplan.lpp  holidayscannerplan_p.h  location.hh  position.hh  stack.hh
tests/: CMakeLists.txt  Makefile.am  example.qml  holiday_gb-eaw_en-gb_Test  holiday_test  holiday_xx_xx_Old  testholidayregion.cpp  testholidayregion.h  testlunar.cpp  testlunar.h  testparseholiday.cpp  testparseholiday.h  testseasons.cpp  testseasons.h  testsunriseset.cpp  testzodiac.cpp
(+156 files in other folders)
