
install( FILES
         holiday_ar
         holiday_at
         holiday_au
         holiday_bavarian
         holiday_BelgiumDutch
         holiday_BelgiumFrench
         holiday_BelgiumWalloon
         holiday_br
         holiday_ca
         holiday_catalan
         holiday_cl
         holiday_co
         holiday_ch
         holiday_cz
         holiday_de
         holiday_dk
         holiday_ee
         holiday_es
         holiday_fi
         holiday_fr
         holiday_frswiss
         holiday_gb
         holiday_gr
         holiday_gt
         holiday_hu
         holiday_is
         holiday_il
         holiday_it
         holiday_jm
         holiday_jp
         holiday_lt
         holiday_mx
         holiday_nl
         holiday_no
         holiday_nz
         holiday_pl
         holiday_pt
         holiday_py
         holiday_quebec
         holiday_ro
         holiday_ru
         holiday_se
         holiday_si
         holiday_th
         holiday_ua
         holiday_us
         holiday_uy
         holiday_ie
         holiday_Suedtirol
         holiday_za
         DESTINATION ${DATA_INSTALL_DIR}/libkholidays)


