
install( FILES
          plan1/holiday_ar_es
          plan1/holiday_at_de
          plan1/holiday_au-act_en-gb
          plan1/holiday_au-nsw_en-gb
          plan1/holiday_au-nt_en-gb
          plan1/holiday_au-qld_en-gb
          plan1/holiday_au-sa_en-gb
          plan1/holiday_au-tas_en-gb
          plan1/holiday_au-vic_en-gb
          plan1/holiday_au-wa_en-gb
          plan1/holiday_be_fr
          plan1/holiday_be_nl
          plan1/holiday_be_wa
          plan1/holiday_bg_bg
          plan1/holiday_br_pt-br
          plan1/holiday_by
          plan1/holiday_ca_en-gb
          plan1/holiday_ca-qc_fr
          plan1/holiday_ch_fr
          plan1/holiday_cl_es
          plan1/holiday_cn_zh-cn
          plan1/holiday_co_es
          plan1/holiday_cz_cs
          plan1/holiday_de-by_de
          plan1/holiday_de_de
          plan1/holiday_dk_da
          plan1/holiday_ee_et
          plan1/holiday_es-ct_ca
          plan1/holiday_es_es
          plan1/holiday_fi_fi
          plan1/holiday_fr_fr
          plan1/holiday_gb-eaw_en-gb
          plan1/holiday_gr_el
          plan1/holiday_gt_es
          plan1/holiday_hu_hu
          plan1/holiday_ie_en-gb
          plan1/holiday_il_en-us
          plan1/holiday_in_en-gb
          plan1/holiday_is_is
          plan1/holiday_it-bz_de
          plan1/holiday_it_it
          plan1/holiday_jm_en-gb
          plan1/holiday_jp_en-us
          plan1/holiday_jp_ja
          plan1/holiday_lt_lt
          plan1/holiday_lu_fr
          plan1/holiday_lu_lb
          plan1/holiday_mx_es
          plan1/holiday_na_en-gb
          plan1/holiday_nl_nl
          plan1/holiday_no_nb
          plan1/holiday_nz_en-gb
          plan1/holiday_pl_pl
          plan1/holiday_pt_pt
          plan1/holiday_py_es
          plan1/holiday_ro_ro
          plan1/holiday_ru_ru
          plan1/holiday_se_sv
          plan1/holiday_si_sl
          plan1/holiday_sk_sk
          plan1/holiday_th_en-gb
          plan1/holiday_ua_uk
          plan1/holiday_us_en-us
          plan1/holiday_uy_es
          plan1/holiday_za_en-gb
         DESTINATION ${DATA_INSTALL_DIR}/libkholidays/plan1)

